crates/parser/tests/fixtures/bad/non_nullary_loop_condition.dl
.decl done_flag(x: number)
.output done_flag
loop until { done_flag } { done_flag(1) :- done_flag(1). }
